# survey-tool

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  gunicorn.conf.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_extensions_and_enums.py  0002_create_users_table.py  0003_create_refresh_tokens_table.py  0004_create_api_keys_table.py  0005_create_surveys_table.py  0006_create_question_groups_table.py  0007_create_questions_table.py  0008_create_answer_options_table.py  0009_add_matrix_question_types.py  0010_create_participants_responses_tables.py  0011_add_participant_token_fields.py  0012_create_quotas_table.py  0013_create_assessments_table.py  0014_add_question_scope_to_assessments.py  0014_create_webhooks_table.py  0014b_add_question_scope_to_assessments.py  0015_add_translations_jsonb_columns.py  0016_add_survey_versioning.py  0017_create_webhook_delivery_logs_table.py  0018_add_user_id_to_webhooks.py  0019_alter_responses_status_to_varchar.py  0020_add_export_query_indexes.py  0021_add_statistics_composite_index.py  0022_fix_title_column_lengths.py  0023_add_email_invitations.py  0023_rename_number_to_numeric_question_type.py  0024_add_email_invitations.py  (+5 more)
backend/app/: cli.py  config.py  database.py  dependencies.py  limiter.py  main.py
backend/survey_tool_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_answer_options.py  test_api_keys.py  test_assessments.py  test_audit_logging.py  test_auth.py  test_choice_validators.py  test_config.py  test_connection_lifecycle.py  test_csv_export_chunked.py  test_e2e.py  test_email_invitations.py  test_email_service.py  test_email_templates.py  test_email_tracking.py  test_error_handling.py  test_export.py  test_expressions.py  test_expressions_evaluator.py  test_expressions_flow.py  test_expressions_lexer.py  test_expressions_parser.py  test_expressions_piping.py  test_expressions_relevance.py  test_expressions_resolver.py  test_logic.py  test_logic_evaluate_expression.py  test_logic_resolve_flow.py  test_logic_validate_expression.py  test_matrix_questions.py  test_matrix_validators.py  test_pagination.py  test_participant_profiles.py  test_participant_token_validation.py  test_question_groups.py  test_question_types.py  test_questions.py  test_quota_service.py  test_quotas.py  test_rate_limiting.py  (+17 more)
(+634 files in other folders)
