[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "survey-tool-backend"
version = "0.1.0"
description = "Survey Tool Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<0.112",
    "uvicorn[standard]>=0.29,<0.30",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<0.30",
    "alembic>=1.13,<2.0",
    "pydantic-settings>=2.2,<3.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "passlib[bcrypt]>=1.7,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1,<9.0",
    "pytest-asyncio>=0.23,<0.24",
    "httpx>=0.27,<0.28",
    "pytest-cov>=5.0,<6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]
