[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "survey-tool-backend"
version = "0.1.0"
description = "Survey Tool Backend API"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<0.112",
    "uvicorn[standard]>=0.29,<0.30",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<0.30",
    "alembic>=1.13,<2.0",
    "pydantic-settings>=2.2,<3.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "bcrypt>=4.0,<6.0",
    "slowapi>=0.1.9",
    "gunicorn>=22.0,<24.0",
    "regex>=2023.0",
    "aiosmtplib>=3.0,<4.0",
    "jinja2>=3.1,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1,<9.0",
    "pytest-asyncio>=0.23,<0.24",
    "httpx>=0.27,<0.28",
    "pytest-cov>=5.0,<6.0",
    "pytest-httpserver>=1.0,<2.0",
    "bandit[toml]>=1.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.bandit]
targets = ["app"]
skips = [
    "B101",  # assert_used: asserts are acceptable in application code for invariant checks
    "B105",  # hardcoded_password_string: false positive on variable names like 'password_hash', 'hashed_password'
    "B106",  # hardcoded_password_funcarg: false positive on bcrypt/auth function parameter names
    "B608",  # hardcoded_sql_expressions: false positive from SQLAlchemy text() usage
]
